implement entitlements and hard check functionality
Add generated OpenAPI models for entitlements, permissions, roles, and feature flags
Implement billing entitlements API integration with proper response handling
Add hard check functionality for enhanced security validation
Update .coderabbit.yaml to exclude generated entitlements and hard check code from review
Generated models include:

EntitlementsResponse, EntitlementsResponseData, Plan, Entitlement
Permission, Role, FeatureFlag, GetBillingEntitlementsResponse
BillingEntitlementsApi for API client integration